# ShipDataFusion

./: CMakeLists.txt  ConfigManager.h  DataTypes.h  DetectionThread.cpp  DetectionThread.h  FFmpegWidget.cpp  FFmpegWidget.h  FusionManager.cpp  FusionManager.h  MessageProcessor.cpp  MessageProcessor.h  MqttClient.cpp  MqttClient.h  MqttReceiver.cpp  MqttReceiver.h  README.md  ShipMqttClient.cpp  ShipMqttClient.h  UIDataTypes.h  VideoGrabber.cpp  VideoGrabber.h  YoloInferencer.cpp  YoloInferencer.h  main.cpp
